try to add another name

--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -33,6 +33,15 @@ import Card from '../components/Card.astro';
                     <p><span style="color: #D7A5FD; ">ANU</span></p>
                 </div>
             </div>
+            <div class = "row">
+                <div class = "column">
+                    <p><span style="color: #D7A5FD; ">Isaac Kanowski</span></p>
+                </div>
+                <div class = "column">
+                    
+                    <p><span style="color: #D7A5FD; ">ANU</span></p>
+                </div>
+            <div class="row"></div>
             </section>
     </main>
 </Layout>
