--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -26,21 +26,15 @@ import Card from '../components/Card.astro';
             <div class = "row">
                 <div class = "column">
                     <h2><span style="color: #D7A5FD; ">Name</span></h2>
-                    <p><span style="color: #D7A5FD; ">Erin Holdorf</span></p>
+                    <p><span style="color: #D7A5FD; ">Erin Holdorf
+                        Isaac Kanowski</span></p>
                 </div>
                 <div class = "column">
                     <h2><span style="color: #D7A5FD; ">Institution</span></h2>
-                    <p><span style="color: #D7A5FD; ">ANU</span></p>
+                    <p><span style="color: #D7A5FD; ">ANU
+                        ANU</span></p>
                 </div>
             </div>
-            <div class = "row">
-                <div class = "column">
-                    <p><span style="color: #D7A5FD; ">Isaac Kanowski</span></p>
-                </div>
-                <div class = "column">
-                    
-                    <p><span style="color: #D7A5FD; ">ANU</span></p>
-                </div>
             <div class="row"></div>
             </section>
     </main>
