extend page section

--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -35,7 +35,10 @@ import Card from '../components/Card.astro';
                     <p><span style="color: #D7A5FD; ">ANU</span></p>
                 </div>
             </div>
-            <div class="row"></div>
+            <div>
+                <br>
+            </br>
+            </div>
             </section>
     </main>
 </Layout>
@@ -46,7 +49,6 @@ import Card from '../components/Card.astro';
         padding: 1.5rem;
         max-width: vw;
         align-items: center;
-        min-height: vh;
     }
 
     h1 {
