extend page section

--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -24,12 +24,12 @@ import Card from '../components/Card.astro';
             <section id='participants'>
                 <h2><span style="color: #D7A5FD; ">Participants</span></h2>
             <div class = "row">
-                <div class = "column">
+                <div class = "column" style = "background-color: black;">
                     <h2><span style="color: #D7A5FD; ">Name</span></h2>
                     <p><span style="color: #D7A5FD; ">Erin Holdorf</span></p>
                     <p><span style="color: #D7A5FD; ">Isaac Kanowski</span></p>
                 </div>
-                <div class = "column">
+                <div class = "column" style = "background-color: black;">
                     <h2><span style="color: #D7A5FD; ">Institution</span></h2>
                     <p><span style="color: #D7A5FD; ">ANU</span></p>
                     <p><span style="color: #D7A5FD; ">ANU</span></p>
