extend page section

--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -103,6 +103,7 @@ import Card from '../components/Card.astro';
         clear:both;
         content: "";
         display: table;
+        background-color: black;
     }
 
     div {
