extend page section

--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -46,6 +46,7 @@ import Card from '../components/Card.astro';
         padding: 1.5rem;
         max-width: vw;
         align-items: center;
+        background-size: 100% 100%;
     }
 
     h1 {
