--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -22,18 +22,13 @@ import Card from '../components/Card.astro';
             <img class="anyofimgclass" src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo">
 		</section>
             <section id='participants'>
-                <h2><span style="color: #D7A5FD; ">Participants</span></h2>
-            <div class = "row">
-                <div class = "column" style = "background-color: black;">
-                    <h2><span style="color: #D7A5FD; ">Name</span></h2>
-                    <p><span style="color: #D7A5FD; ">Erin Holdorf <br>
-                    Isaac Kanowski</span></p>
-                </div>
-                <div class = "column" style = "background-color: black;">
-                    <h2><span style="color: #D7A5FD; ">Institution</span></h2>
-                    <p><span style="color: #D7A5FD; ">ANU <br>
-                    ANU </span></p>
-                </div>
+            <table>
+              <tr>
+                <td>Emil</td>
+                <td>Tobias</td>
+                <td>Linus</td>
+              </tr>
+            </table>
             </section>
     </main>
 </Layout>
