--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -22,11 +22,12 @@ import Card from '../components/Card.astro';
             <img class="anyofimgclass" src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo">
 		</section>
             <section id='participants'>
+                <h2><span style="color: #D7A5FD; ">Participants</span></h2>
             <table>
               <tr>
-                <td>Emil</td>
-                <td>Tobias</td>
-                <td>Linus</td>
+                <td><span style="color: #D7A5FD; ">Name</span></td>
+                <td><span style="color: #D7A5FD; ">Name</span></td>
+                <td><span style="color: #D7A5FD; ">Name</span></td>
               </tr>
             </table>
             </section>
