--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -23,13 +23,17 @@ import Card from '../components/Card.astro';
 		</section>
             <section id='participants'>
                 <h2><span style="color: #D7A5FD; ">Participants</span></h2>
-            <table>
-              <tr>
-                <td><span style="color: #D7A5FD; ">Name</span></td>
-                <td><span style="color: #D7A5FD; ">Name</span></td>
-                <td><span style="color: #D7A5FD; ">Name</span></td>
-              </tr>
-            </table>
+            <div class = "row">
+                <div class = "column" style = "background-color: black;">
+                    <h2><span style="color: #D7A5FD; ">Name</span></h2>
+                    <p><span style="color: #D7A5FD; ">Erin Holdorf <br>
+                    Isaac Kanowski</span></p>
+                </div>
+                <div class = "column" style = "background-color: black;">
+                    <h2><span style="color: #D7A5FD; ">Institution</span></h2>
+                    <p><span style="color: #D7A5FD; ">ANU <br>
+                    ANU </span></p>
+                </div>
             </section>
     </main>
 </Layout>
@@ -90,12 +94,6 @@ import Card from '../components/Card.astro';
         width:100%;
         display: inline-flex;
         flex-wrap: wrap;
-    }
-    .row:after {
-        clear:both;
-        content: "";
-        display: table;
-        background-color: black;
     }
 
     div {
