--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -23,7 +23,7 @@ import Card from '../components/Card.astro';
 		</section>
             <section id='participants'>
                 <h2><span style="color: #D7A5FD; ">Participants</span></h2>
-            <div class = "row">
+                <div class = "row">
                 <div class = "column" style = "background-color: black;">
                     <h2><span style="color: #D7A5FD; ">Name</span></h2>
                     <p><span style="color: #D7A5FD; ">Erin Holdorf <br>
@@ -33,6 +33,12 @@ import Card from '../components/Card.astro';
                     <h2><span style="color: #D7A5FD; ">Institution</span></h2>
                     <p><span style="color: #D7A5FD; ">ANU <br>
                     ANU </span></p>
+                </div>
+                <div>
+                </div>
+                <div>
+                </div>
+                <div>
                 </div>
             </section>
     </main>
