--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -34,11 +34,11 @@ import Card from '../components/Card.astro';
                     <p><span style="color: #D7A5FD; ">ANU <br>
                     ANU </span></p>
                 </div>
-                <div class = "column" style = "background-color: black;">
+                <div class = "row">
                 </div>
-                <div class = "column" style = "background-color: black;">
+                <div class = "row">
                 </div>
-                <div class = "column" style = "background-color: black;">
+                <div class = "row">
                 </div>
             </section>
     </main>
