extend page section

--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -41,6 +41,26 @@ import Card from '../components/Card.astro';
                 <div class = "row">
                 </div>
             </section>
+            <div>
+                <br>
+                </br>
+            </div>
+            <div>
+                <br>
+                </br>
+            </div>
+            <div>
+                <br>
+                </br>
+            </div>
+            <div>
+                <br>
+                </br>
+            </div>
+            <div>
+                <br>
+                </br>
+            </div>
     </main>
 </Layout>
 
