updating to have all MSSS organising members

--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -26,13 +26,23 @@ import Card from '../components/Card.astro';
                 <div class = "row">
                 <div class = "column" style = "background-color: black;">
                     <h2><span style="color: #D7A5FD; ">Name</span></h2>
-                    <p><span style="color: #D7A5FD; ">Erin Holdorf <br>
-                    Isaac Kanowski</span></p>
+                    <p><span style="color: #D7A5FD; ">
+                        Neelesh Amrutha <br>
+                        Sarah Bradbury <b>
+                        Erin Holdorf <br>
+                        Isaac Kanowski <br>
+                        Shin-Jeong Kim <br>
+                        Bailey Martin</span></p>
                 </div>
                 <div class = "column" style = "background-color: black;">
                     <h2><span style="color: #D7A5FD; ">Institution</span></h2>
-                    <p><span style="color: #D7A5FD; ">ANU <br>
-                    ANU </span></p>
+                    <p><span style="color: #D7A5FD; ">
+                        ANU <br>
+                        ANU, CSIRO <br>
+                        ANU <br>
+                        ANU <br>
+                        ANU <br>
+                        ANU </span></p>
                 </div>
                 <div class = "row">
                 </div>
