updating to have all MSSS organising members

--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -28,7 +28,7 @@ import Card from '../components/Card.astro';
                     <h2><span style="color: #D7A5FD; ">Name</span></h2>
                     <p><span style="color: #D7A5FD; ">
                         Neelesh Amrutha <br>
-                        Sarah Bradbury <b>
+                        Sarah Bradbury <br>
                         Erin Holdorf <br>
                         Isaac Kanowski <br>
                         Shin-Jeong Kim <br>
@@ -44,33 +44,8 @@ import Card from '../components/Card.astro';
                         ANU <br>
                         ANU </span></p>
                 </div>
-                <div class = "row">
-                </div>
-                <div class = "row">
-                </div>
-                <div class = "row">
                 </div>
             </section>
-            <div>
-                <br>
-                </br>
-            </div>
-            <div>
-                <br>
-                </br>
-            </div>
-            <div>
-                <br>
-                </br>
-            </div>
-            <div>
-                <br>
-                </br>
-            </div>
-            <div>
-                <br>
-                </br>
-            </div>
     </main>
 </Layout>
 
@@ -130,6 +105,7 @@ import Card from '../components/Card.astro';
         width:100%;
         display: inline-flex;
         flex-wrap: wrap;
+        padding-bottom: 5cm;
     }
 
     div {
