adding program as embedded sheet?

--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -19,12 +19,12 @@ import Card from '../components/Card.astro';
             </br>
         </div>
         <section id="logo">
-            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTWyeEk7lP0ghHTPQ5ildsaeMUd0iOvc79t3rZOsLwh2edWeJkB5RMMFtPvM7rc0qEBEMMLDUrcTamu/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+            <img class="anyofimgclass" src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo">
 		</section>
             <section id='program' style="align-content: centre;">
                 <h2><span style="color: #A5ADFD; ">Program</span></h2>
                 <p><span style="color: #A5ADFD; ">The program.</span></p>
-                <img class="anyofimgclass" src="/msss2023/program.png" alt="Program">
+                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTWyeEk7lP0ghHTPQ5ildsaeMUd0iOvc79t3rZOsLwh2edWeJkB5RMMFtPvM7rc0qEBEMMLDUrcTamu/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
             </section>
     </main>
 </Layout>
