testing new background

--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -4,7 +4,7 @@ import Card from '../components/Card.astro';
 ---
 
 <Layout title="MSSS2023">
-    <main style="background-color:#000000; text-align: center">
+    <main style= "text-align: center">
         <!-- Keep the header, and buttons the same for all pages-->
         <h1><span>Mount Stromlo Student Seminars 2023</span></h1>
         <section id="Menu">
@@ -56,6 +56,7 @@ import Card from '../components/Card.astro';
         max-width: vw;
         align-items: center;
         background-size: 100% 100%;
+        background-image: url("/msss2023/MSSS2023_PosterArt.png");
     }
 
     h1 {
