--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -18,9 +18,9 @@ import Card from '../components/Card.astro';
             <br>
             </br>
         </div>
-        <section id="logo">
+        <!--<section id="logo">
             <img class="anyofimgclass" src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo">
-		</section>
+		</section> -->
             <section id='participants'>
                 <h2><span style="color: #D7A5FD; ">Participants</span></h2>
                 <div class = "row">
@@ -35,8 +35,8 @@ import Card from '../components/Card.astro';
                         Bailey Martin</span></p>
                 </div>
                 <div class = "column" style = "background-color: black;">
-                    <h2><span style="color: #D7A5FD; ">Institution</span></h2>
-                    <p><span style="color: #D7A5FD; ">
+                    <h2><span style="color: #D7A5FD; background-color: black;">Institution</span></h2>
+                    <p><span style="color: #D7A5FD; background-color: black;">
                         ANU <br>
                         ANU, CSIRO <br>
                         ANU <br>
