adding "logo" back, but smaller

--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -18,9 +18,9 @@ import Card from '../components/Card.astro';
             <br>
             </br>
         </div>
-        <!--<section id="logo">
-            <img class="anyofimgclass" src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo">
-		</section> -->
+        <section id="logo">
+            <img class="anyofimgclass" style="width=50%" src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo">
+		</section> 
             <section id='participants'>
                 <h2><span style="color: #D7A5FD; ">Participants</span></h2>
                 <div class = "row">
@@ -112,7 +112,6 @@ import Card from '../components/Card.astro';
     div {
         display: block;
         text-align: center;
-        height: 10px;
     }
 
     .text-gradient {
