adding "logo" back, but smaller

--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -19,10 +19,10 @@ import Card from '../components/Card.astro';
             </br>
         </div>
         <section id="logo">
-            <img class="anyofimgclass" style="width=50%" src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo">
+            <img class="anyofimgclass" style="max-width=50%" src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo">
 		</section> 
             <section id='participants'>
-                <h2><span style="color: #D7A5FD; ">Participants</span></h2>
+                <h2><span style="color: #D7A5FD;background-color: black; ">Participants</span></h2>
                 <div class = "row">
                 <div class = "column" style = "background-color: black;">
                     <h2><span style="color: #D7A5FD; ">Name</span></h2>
