--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -19,11 +19,11 @@ import Card from '../components/Card.astro';
             </br>
         </div>
         <section id="logo">
-            <img class="anyofimgclass" style="max-width=50%" src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo">
+            <img class="anyofimgclass" style="max-width=10%" src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo">
 		</section> 
-            <section id='participants'>
+            <section id='participants' style="background-color: black;">
                 <h2><span style="color: #D7A5FD;background-color: black; ">Participants</span></h2>
-                <div class = "row">
+                <div class = "row">   
                 <div class = "column" style = "background-color: black;">
                     <h2><span style="color: #D7A5FD; ">Name</span></h2>
                     <p><span style="color: #D7A5FD; ">
