--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -21,7 +21,7 @@ import Card from '../components/Card.astro';
         <section id="logo">
             <img class="anyofimgclass" style="max-width=10%" src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo">
 		</section> 
-            <section id='participants' style="background-color: black;">
+            <section id='participants' style="background-color:rgba(0,0,0,. 5);">
                 <h2><span style="color: #D7A5FD;background-color: black; ">Participants</span></h2>
                 <div class = "row">   
                 <div class = "column" style = "background-color: black;">
