make background semi-transparent

--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -19,12 +19,12 @@ import Card from '../components/Card.astro';
             </br>
         </div>
         <section id="logo">
-            <img class="anyofimgclass" style="max-width=10%" src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo">
+            <img style="max-width=10%; display: block; height: auto;" src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo">
 		</section> 
-            <section id='participants' style="background-color:rgba(0,0,0,. 5);">
-                <h2><span style="color: #D7A5FD;background-color: black; ">Participants</span></h2>
+            <section id='participants' style="background-color:rgba(0,0,0,0.8);">
+                <h2><span style="color: #D7A5FD;background-color:rgba(0,0,0,0.8); ">Participants</span></h2>
                 <div class = "row">   
-                <div class = "column" style = "background-color: black;">
+                <div class = "column" style = "background-color: rgba(0,0,0,0.8);">
                     <h2><span style="color: #D7A5FD; ">Name</span></h2>
                     <p><span style="color: #D7A5FD; ">
                         Neelesh Amrutha <br>
@@ -34,9 +34,9 @@ import Card from '../components/Card.astro';
                         Shin-Jeong Kim <br>
                         Bailey Martin</span></p>
                 </div>
-                <div class = "column" style = "background-color: black;">
-                    <h2><span style="color: #D7A5FD; background-color: black;">Institution</span></h2>
-                    <p><span style="color: #D7A5FD; background-color: black;">
+                <div class = "column" style = "background-color: rgba(0,0,0,0.8);">
+                    <h2><span style="color: #D7A5FD; background-color: rgba(0,0,0,0.8);">Institution</span></h2>
+                    <p><span style="color: #D7A5FD; background-color: rgba(0,0,0,0.8);">
                         ANU <br>
                         ANU, CSIRO <br>
                         ANU <br>
