make background semi-transparent

--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -19,7 +19,7 @@ import Card from '../components/Card.astro';
             </br>
         </div>
         <section id="logo">
-            <img style="max-width=10%; display: block; height: auto; text-align: center; " src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo">
+            <img style="max-width=100px; display: block; height: auto; text-align: center; " src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo">
 		</section> 
             <section id='participants' style="background-color:rgba(0,0,0,0.8);">
                 <h2><span style="color: #D7A5FD;background-color:rgba(0,0,0,0.8); ">Participants</span></h2>
