make background semi-transparent

--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -19,7 +19,7 @@ import Card from '../components/Card.astro';
             </br>
         </div>
         <section id="logo">
-            <img style="max-width=100px; display: block; height: auto; text-align: center; " src="/msss2023/airglow.jpeg" alt="MSSS2023 Logo">
+            <img class="logo" src="/msss2023/airglow.jpeg" alt="MSSS2023 Logo">
 		</section> 
             <section id='participants' style="background-color:rgba(0,0,0,0.8);">
                 <h2><span style="color: #D7A5FD;background-color:rgba(0,0,0,0.8); ">Participants</span></h2>
@@ -96,6 +96,12 @@ import Card from '../components/Card.astro';
         display: block;
         max-width: 100%;
         height: auto;
+    }
+    .logo{
+        display: block;
+        height: auto;
+        max-width: 10%; 
+       text-align: center; "
     }
 
     .column {
