--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -19,7 +19,7 @@ import Card from '../components/Card.astro';
             </br>
         </div>
         <section id="logo">
-            <img class="logo" src="/msss2023/airglow.jpeg" alt="MSSS2023 Logo">
+            <img class="logopic" src="/msss2023/airglow.jpeg" alt="MSSS2023 Logo">
 		</section> 
             <section id='participants' style="background-color:rgba(0,0,0,0.8);">
                 <h2><span style="color: #D7A5FD;background-color:rgba(0,0,0,0.8); ">Participants</span></h2>
@@ -97,7 +97,7 @@ import Card from '../components/Card.astro';
         max-width: 100%;
         height: auto;
     }
-    .logo{
+    .logopic{
         display: block;
         height: auto;
         max-width: 10%; 
