--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -101,7 +101,7 @@ import Card from '../components/Card.astro';
         display: block;
         height: auto;
         max-width: 10%; 
-       text-align: center; "
+        text-align: center;
     }
 
     .column {
