make background semi-transparent

--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -55,7 +55,7 @@ import Card from '../components/Card.astro';
         padding: 1.5rem;
         max-width: vw;
         align-items: center;
-        background-size: 100% 100%;
+        background-size: 100% ;
         background-image: url("/msss2023/MSSS2023_PosterArt.png");
     }
 
@@ -100,8 +100,8 @@ import Card from '../components/Card.astro';
     .logopic{
         display: block;
         height: auto;
-        max-width: 10%; 
-        text-align: center;
+        max-width: 50%; 
+        align-items: center;
     }
 
     .column {
