align logo centre

--- a/src/pages/registration.astro
+++ b/src/pages/registration.astro
@@ -4,7 +4,7 @@ import Card from '../components/Card.astro';
 ---
 
 <Layout title="MSSS2023">
-    <main style="background-color:#000000; text-align: center">
+    <main style="text-align: center">
         <!-- Keep the header, and buttons the same for all pages-->
         <h1><span>Mount Stromlo Student Seminars 2023</span></h1>
         <section id="Menu">
@@ -34,6 +34,11 @@ import Card from '../components/Card.astro';
         padding: 1.5rem;
         max-width: vw;
         align-items: center;
+        align-content: center;
+        background-size: 100% ;
+        background-image: url("/msss2023/MSSS2023_PosterArt.png");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
     }
 
     h1 {
