--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -55,6 +55,7 @@ import Card from '../components/Card.astro';
         padding: 1.5rem;
         max-width: vw;
         align-items: center;
+        align-content: center;
         background-size: 100% ;
         background-image: url("/msss2023/MSSS2023_PosterArt.png");
         background-repeat: no-repeat;
