--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -105,6 +105,7 @@ import Card from '../components/Card.astro';
         height: auto;
         max-width: 50%; 
         align-items: center;
+        align-self: center;
     }
 
     .column {
