--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -19,8 +19,8 @@ import Card from '../components/Card.astro';
             </br>
         </div>
         <section id="logo">
-            <img class="anyofimgclass" src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo">
-		</section>
+            <img class="logopic" src="/msss2023/airglow.jpeg" alt="MSSS2023 Logo">
+		</section> 
             <section id='program' style="align-content: centre;">
                 <h2><span style="color: #A5ADFD; ">Program</span></h2>
                 <p><span style="color: #A5ADFD; ">The program.</span></p>
@@ -73,6 +73,14 @@ import Card from '../components/Card.astro';
         -webkit-text-fill-color: rgba(0, 0, 255, 0);
         margin: 5px;
         justify-content: space-between;
+    }
+
+    .logopic{
+        display: block;
+        height: auto;
+        max-width: 50%; 
+        align-items: center;
+        align-self: center;
     }
 
     .anyofimgclass{
