--- a/src/pages/registration.astro
+++ b/src/pages/registration.astro
@@ -19,8 +19,8 @@ import Card from '../components/Card.astro';
             </br>
         </div>
         <section id="logo">
-            <img class="anyofimgclass" src="/msss2023/MSSS2023_PosterArt.png" alt="MSSS2023 Logo">
-		</section>
+            <img class="logopic" src="/msss2023/airglow.jpeg" alt="MSSS2023 Logo">
+		</section> 
             <section id='registration'>
                 <h2><span style="color: #A5FDF7; ">Registration</span></h2>
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdUdnN8Be3sbMAUp1MvajPAtp-d51xfA_5qvKe4wtRLORfrcQ/viewform?embedded=true" width=100% height=1100px frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
@@ -72,6 +72,14 @@ import Card from '../components/Card.astro';
         -webkit-text-fill-color: rgba(0, 0, 255, 0);
         margin: 5px;
         justify-content: space-between;
+    }
+
+    .logopic{
+        display: block;
+        height: auto;
+        max-width: 50%; 
+        align-items: center;
+        align-self: center;
     }
 
     .anyofimgclass{
