--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -81,6 +81,9 @@ import Card from '../components/Card.astro';
         max-width: 50%; 
         align-items: center;
         align-self: center;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
     }
 
     .anyofimgclass{
