--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -103,9 +103,11 @@ import Card from '../components/Card.astro';
     .logopic{
         display: block;
         height: auto;
-        max-width: 50%; 
         align-items: center;
         align-self: center;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
     }
 
     .column {
