--- a/src/pages/registration.astro
+++ b/src/pages/registration.astro
@@ -77,9 +77,11 @@ import Card from '../components/Card.astro';
     .logopic{
         display: block;
         height: auto;
-        max-width: 50%; 
         align-items: center;
         align-self: center;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
     }
 
     .anyofimgclass{
