--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -22,9 +22,9 @@ import Card from '../components/Card.astro';
             <img class="logopic" src="/msss2023/airglow.jpeg" alt="MSSS2023 Logo">
 		</section> 
             <section id='participants' style="background-color:rgba(0,0,0,0.8);">
-                <h2><span style="color: #D7A5FD;background-color:rgba(0,0,0,0.8); ">Participants</span></h2>
-                <div class = "row" style = "background-color: rgba(0,0,0,0.8);">   
-                <div class = "column" style = "background-color: rgba(0,0,0,0.8);">
+                <h2><span style="color: #D7A5FD; ">Participants</span></h2>
+                <div class = "row">   
+                <div class = "column" >
                     <h2><span style="color: #D7A5FD; ">Name</span></h2>
                     <p><span style="color: #D7A5FD; ">
                         Neelesh Amrutha <br>
@@ -34,9 +34,9 @@ import Card from '../components/Card.astro';
                         Shin-Jeong Kim <br>
                         Bailey Martin</span></p>
                 </div>
-                <div class = "column" style = "background-color: rgba(0,0,0,0.8);">
-                    <h2><span style="color: #D7A5FD; background-color: rgba(0,0,0,0.8);">Institution</span></h2>
-                    <p><span style="color: #D7A5FD; background-color: rgba(0,0,0,0.8);">
+                <div class = "column" >
+                    <h2><span style="color: #D7A5FD;">Institution</span></h2>
+                    <p><span style="color: #D7A5FD;">
                         ANU <br>
                         ANU, CSIRO <br>
                         ANU <br>
