sapcing of headings

--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -22,7 +22,7 @@ import Card from '../components/Card.astro';
             <img class="logopic" src="/msss2023/airglow.jpeg" alt="MSSS2023 Logo">
 		</section> 
             <section id='participants' style="background-color:rgba(0,0,0,0.8);">
-                <h2><span style="color: #D7A5FD; ">Participants</span></h2>
+                <h2><span style="color: #D7A5FD; ">Participants <br></span></h2>
                 <div class = "row">   
                 <div class = "column" >
                     <h2><span style="color: #D7A5FD; ">Name</span></h2>
