--- a/src/pages/registration.astro
+++ b/src/pages/registration.astro
@@ -21,8 +21,8 @@ import Card from '../components/Card.astro';
         <section id="logo">
             <img class="logopic" src="/msss2023/airglow.jpeg" alt="MSSS2023 Logo">
 		</section> 
-            <section id='registration'>
-                <h2><span style="color: #A5FDF7; ">Registration</span></h2>
+            <section id='registration' style="background-color:rgba(0,0,0,0.8);">
+                <h2><span style="color: #A5FDF7; ">Registration <br></span></h2>
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdUdnN8Be3sbMAUp1MvajPAtp-d51xfA_5qvKe4wtRLORfrcQ/viewform?embedded=true" width=100% height=1100px frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </section>
     </main>
