--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,8 +22,8 @@ import Card from '../components/Card.astro';
         <section id="logo">
             <img class="logopic" src="/msss2023/airglow.jpeg" alt="MSSS2023 Logo">
 		</section> 
-            <section id='info'>
-                <h2 style="text-align:center"><span style="color: #FDDDA5; ">Information and Key Dates</span></h2>
+            <section id='info' style="background-color:rgba(0,0,0,0.8);">
+                <h2 style="text-align:center"><span style="color: #FDDDA5; ">Information and Key Dates <br></span></h2>
                 <p><span style="color: #FDDDA5; ">Some writing about general information about the seminars.</span></p>
             </section>
     </main>
