--- a/src/pages/registration.astro
+++ b/src/pages/registration.astro
@@ -35,7 +35,7 @@ import Card from '../components/Card.astro';
         max-width: vw;
         align-items: center;
         align-content: center;
-        background-size: 100% ;
+        background-size: 100% 100%;
         background-image: url("/msss2023/MSSS2023_PosterArt.png");
         background-repeat: no-repeat;
         background-attachment: fixed;
