--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,8 +23,41 @@ import Card from '../components/Card.astro';
             <img class="logopic" src="/msss2023/airglow.jpeg" alt="MSSS2023 Logo">
 		</section> 
             <section id='info' style="background-color:rgba(0,0,0,0.5);">
-                <h2 style="text-align:center"><span style="color: #FDDDA5; ">Information and Key Dates <br></span></h2>
-                <p><span style="color: #FDDDA5; ">Some writing about general information about the seminars.</span></p>
+                <h2 style="text-align:center"><span style="color: #FDDDA5; "> About MSSS2023 <br></span></h2>
+                <p><span style="color: #FDDDA5; "> The ANU Research School of Astronomy and Astrophysics (RSAA) is proud
+                    to present the Mount Stromlo Student Seminars 2023 (MSSS2023) <br>
+                    MSSS2023 is a free, fully-catered 3 day student-led conference held at Mount Stromlo Observatory from the 8-10 November.
+                    This year's theme is "Colours of the Universe". <br>
+                    This year we invite students from around Australia to join us and present their research and/or themed talks. <br>
+                    Some examples of previous talks are: Astronomy murder mystery,
+                    using magnesium isotopes for time travel, how to print "Hello World!" in 33 easy steps and
+                    studying metallicity gradients of galaxies.
+                </span></p>
+                <h2 style="text-align:center"><span style="color: #FDDDA5; "> Event Information <br></span></h2>
+                <p><span style="color: #FDDDA5; "> MSSS2023 is a free-to-attend, catered event organised by students of the RSAA. <br>
+                    It is not required for atendees to present a talk, though it is encouraged.
+                    Student talks will be 15 minute presentations plus 5 minutes Q&A.
+                    There will be prizes for the best science talk, themed talk and overall best as voted by atendees. <br>
+                    There is no public transport up to Mount Stromlo Observatory,
+                    though we will organise transportation from ANU main campus for those who require it (one round-trip per day).
+                    Please let us know in the registration form if you will be requiring this transport, otherwise you are more than welcome to drive.
+                </span></p>
+                <h2 style="text-align:center"><span style="color: #FDDDA5; "> Code of Conduct <br></span></h2>
+                <p><span style="color: #FDDDA5; "> Please behave professionally during the event.
+                    Harassment of any manner or inappropriate comments, jokes or remarks will not be tolerated.
+                    Questions and constructive discussions are welcome, but be respectful and considerate.
+                    <!-- INCLUDE RSAA and sponsor CODE OF CONDUCT -->
+                    Violation of our code of conduct may lead to you being sanctioned, at the discretion of the organisers.
+                </span></p>
+
+                <h2 style="text-align:center"><span style="color: #FDDDA5; "> Acknowledgements <br></span></h2>
+                <p><span style="color: #FDDDA5; "> We acknowledge and celebrate the First Australians on whose traditional lands we meet,
+                    the Ngunnawal and Ngambri people
+                    and pay our respect to their elders past, present and emerging. We extend this respect to
+                    Aboriginal and Torres Strait Islander peoples attending our event. <br>
+                    We would also like to acknowledge funding provided by the ANU Research School of Astronomy and Astrophysics (RSAA).
+                </span></p>
+
             </section>
     </main>
 </Layout>
