Added contact form and key dates

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,11 +25,11 @@ import Card from '../components/Card.astro';
             <section id='info' style="background-color:rgba(0,0,0,0.5);">
                 <h2 style="text-align:center"><span style="color: #FDDDA5; "> About MSSS2023 <br></span></h2>
                 <p><span style="color: #FDDDA5; "> The ANU Research School of Astronomy and Astrophysics (RSAA) is proud
-                    to present the Mount Stromlo Student Seminars 2023 (MSSS2023) <br>
+                    to present the Mount Stromlo Student Seminars 2023 (MSSS2023)! <br>
                     MSSS2023 is a free, fully-catered 3 day student-led conference held at Mount Stromlo Observatory from the 8-10 November.
                     This year's theme is "Colours of the Universe". <br>
                     This year we invite students from around Australia to join us and present their research and/or themed talks. <br>
-                    Some examples of previous talks are: Astronomy murder mystery,
+                    Some examples of previous talks are: astronomy murder mystery,
                     using magnesium isotopes for time travel, how to print "Hello World!" in 33 easy steps and
                     studying metallicity gradients of galaxies.
                 </span></p>
@@ -40,7 +40,15 @@ import Card from '../components/Card.astro';
                     There will be prizes for the best science talk, themed talk and overall best as voted by atendees. <br>
                     There is no public transport up to Mount Stromlo Observatory,
                     though we will organise transportation from ANU main campus for those who require it (one round-trip per day).
-                    Please let us know in the registration form if you will be requiring this transport, otherwise you are more than welcome to drive.
+                    Please let us know in the registration form if you will be requiring this transport, otherwise you are more than welcome to drive. <br>
+                    If you have further questions please contact us via the
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSf7ZXfUXscKkvgXRaMlwVJqz550lU6GaLd8oVvHUIBo0EH4vg/viewform?usp=sf_link" >Contact Form.</a>
+                </span></p>
+                <h2 style="text-align:center"><span style="color: #FDDDA5; "> Key Dates <br></span></h2>
+                <p><span style="color: #FDDDA5; "> Registration closes : Friday 20 October <br>
+                    Abstracts due : Friday 27 October <br>
+                    Presentations finalised : Wednesday 1 November <br>
+                    MSSS2023 event : Wednesday 8-10 November
                 </span></p>
                 <h2 style="text-align:center"><span style="color: #FDDDA5; "> Code of Conduct <br></span></h2>
                 <p><span style="color: #FDDDA5; "> Please behave professionally during the event.
