--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,8 +26,8 @@ import Card from '../components/Card.astro';
                 <h2 style="text-align:center"><span style="color: #FDDDA5; "> About MSSS2023 <br></span></h2>
                 <p><span style="color: #FDDDA5; "> The ANU Research School of Astronomy and Astrophysics (RSAA) is proud
                     to present the Mount Stromlo Student Seminars 2023 (MSSS2023)! <br>
-                    MSSS2023 is a free, fully-catered 3 day student-led conference held at Mount Stromlo Observatory from the 8-10 November.
-                    This year's theme is "Colours of the Universe". <br>
+                    MSSS2023 is a <b>free, fully-catered 3 day student-led conference</b> held at Mount Stromlo Observatory from the 8-10 November. <br>
+                    This year's theme is <b>"Colours of the Universe"</b>. <br>
                     This year we invite students from around Australia to join us and present their research and/or themed talks. <br>
                     Some examples of previous talks are: astronomy murder mystery,
                     using magnesium isotopes for time travel, how to print "Hello World!" in 33 easy steps and
@@ -36,19 +36,19 @@ import Card from '../components/Card.astro';
                 <h2 style="text-align:center"><span style="color: #FDDDA5; "> Event Information <br></span></h2>
                 <p><span style="color: #FDDDA5; "> MSSS2023 is a free-to-attend, catered event organised by students of the RSAA. <br>
                     It is not required for atendees to present a talk, though it is encouraged.
-                    Student talks will be 15 minute presentations plus 5 minutes Q&A.
+                    Student talks will be <b>15 minute presentations plus 5 minutes Q&A</b>.
                     There will be prizes for the best science talk, themed talk and overall best as voted by atendees. <br>
                     There is no public transport up to Mount Stromlo Observatory,
                     though we will organise transportation from ANU main campus for those who require it (one round-trip per day).
                     Please let us know in the registration form if you will be requiring this transport, otherwise you are more than welcome to drive. <br>
                     If you have further questions please contact us via the
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSf7ZXfUXscKkvgXRaMlwVJqz550lU6GaLd8oVvHUIBo0EH4vg/viewform?usp=sf_link" >Contact Form.</a>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSf7ZXfUXscKkvgXRaMlwVJqz550lU6GaLd8oVvHUIBo0EH4vg/viewform?usp=sf_link" ><b>Contact Form</b>.</a>
                 </span></p>
                 <h2 style="text-align:center"><span style="color: #FDDDA5; "> Key Dates <br></span></h2>
-                <p><span style="color: #FDDDA5; "> Registration closes : Friday 20 October <br>
-                    Abstracts due : Friday 27 October <br>
-                    Presentations finalised : Wednesday 1 November <br>
-                    MSSS2023 event : Wednesday 8-10 November
+                <p><span style="color: #FDDDA5; "> <b>Registration closes</b> : Friday 20 October <br>
+                    <b>Abstracts due </b> : Friday 27 October <br>
+                    <b>Presentations finalised </b> : Wednesday 1 November <br>
+                    <b>MSSS2023 event </b> : Wednesday 8-10 November
                 </span></p>
                 <h2 style="text-align:center"><span style="color: #FDDDA5; "> Code of Conduct <br></span></h2>
                 <p><span style="color: #FDDDA5; "> Please behave professionally during the event.
