--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,6 +38,10 @@ import Card from '../components/Card.astro';
                     It is not required for atendees to present a talk, though it is encouraged.
                     Student talks will be <b>15 minute presentations plus 5 minutes Q&A</b>.
                     There will be prizes for the best science talk, themed talk and overall best as voted by atendees. <br>
+                    We will be having a Panel Q&A with academics, post-docs and late-stage PhD students.
+                    If you think of any questions to ask them, write them down and you can submit them during the event or via
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSffxACsd2UrLTamUKFW_IwLjFxrrTJaghAWlCLHHPkXIfIyDA/viewform?usp=sf_link" ><b>this form</b>.</a> <br>
+
                     There is no public transport up to Mount Stromlo Observatory,
                     though we will organise transportation from ANU main campus for those who require it (one round-trip per day).
                     Please let us know in the registration form if you will be requiring this transport, otherwise you are more than welcome to drive. <br>
