adding the logo!

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import Card from '../components/Card.astro';
             </br>
         </div>
         <section id="logo">
-            <img class="logopic" src="/msss2023/airglow.jpeg" alt="MSSS2023 Logo">
+            <img class="logopic" src="/msss2023/logo_transparent.png" alt="MSSS2023 Logo">
 		</section> 
             <section id='info' style="background-color:rgba(0,0,0,0.5);">
                 <h2 style="text-align:center"><span style="color: #FDDDA5; "> About MSSS2023 <br></span></h2>
