--- a/src/pages/registration.astro
+++ b/src/pages/registration.astro
@@ -19,7 +19,7 @@ import Card from '../components/Card.astro';
             </br>
         </div>
         <section id="logo">
-            <img class="logopic" src="/msss2023/airglow.jpeg" alt="MSSS2023 Logo">
+            <img class="logopic" src="/msss2023/logo_transparent.png" alt="MSSS2023 Logo">
 		</section> 
             <section id='registration' style="background-color:rgba(0,0,0,0.5);">
                 <h2><span style="color: #A5FDF7; ">Registration <br></span></h2>
