--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -127,7 +127,7 @@ import Card from '../components/Card.astro';
         align-self: center;
         margin-left: auto;
         margin-right: auto;
-        width: 20rem;
+        width: 0.1vw;
     }
 
     .anyofimgclass{
