--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -107,7 +107,7 @@ import Card from '../components/Card.astro';
         align-self: center;
         margin-left: auto;
         margin-right: auto;
-        width: 30%;
+        max-width: 50%;
     }
 
     .column {
