--- a/src/pages/registration.astro
+++ b/src/pages/registration.astro
@@ -80,7 +80,7 @@ import Card from '../components/Card.astro';
         align-self: center;
         margin-left: auto;
         margin-right: auto;
-        width: 30%;
+        max-width: 50%;
     }
 
     .anyofimgclass{
