--- a/src/pages/registration.astro
+++ b/src/pages/registration.astro
@@ -6,7 +6,14 @@ import Card from '../components/Card.astro';
 <Layout title="MSSS2023">
     <main style="text-align: center">
         <!-- Keep the header, and buttons the same for all pages-->
-        <h1><span>Mount Stromlo Student Seminars 2023</span></h1>
+        <!--<h1><span>Mount Stromlo Student Seminars 2023</span></h1>-->
+        <section id="logo">
+            <img class="logopic" src="/msss2023/logo_transparent.png" alt="MSSS2023 Logo">
+		</section> 
+        <div>
+            <br>
+            </br>
+        </div>
         <section id="Menu">
             <a href="/msss2023/" class='button'><img src="/msss2023/information_button.png" width="75" alt="images"></a>
             <!--<a href="#keydates" class='button'><img src="/msss2023/key_dates_button.png" width="75" alt="images"></a> -->
@@ -14,13 +21,6 @@ import Card from '../components/Card.astro';
             <a href="/msss2023/program/" class='button'><img src="/msss2023/program_button.png" width="75" alt="images"></a>
             <a href="/msss2023/participants/" class='button'><img src="/msss2023/participants_button.png" width="75" alt="images"></a>
         </section>
-        <div>
-            <br>
-            </br>
-        </div>
-        <section id="logo">
-            <img class="logopic" src="/msss2023/logo_transparent.png" alt="MSSS2023 Logo">
-		</section> 
             <section id='registration' style="background-color:rgba(0,0,0,0.5);">
                 <h2><span style="color: #A5FDF7; ">Registration <br></span></h2>
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdUdnN8Be3sbMAUp1MvajPAtp-d51xfA_5qvKe4wtRLORfrcQ/viewform?embedded=true" width=100% height=1100px frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
