--- a/src/pages/registration.astro
+++ b/src/pages/registration.astro
@@ -80,7 +80,16 @@ import Card from '../components/Card.astro';
         align-self: center;
         margin-left: auto;
         margin-right: auto;
-        max-width: 40%;
+    }
+    @media only screen and (max-width: 600px) {
+                .logopic {
+                  max-width:50%
+                }
+              }
+    @media only screen and (min-width: 601px) {
+    .logopic {
+        max-width:30%
+    }
     }
 
     .anyofimgclass{
